@@ -1,11 +1,11 @@
-ab80dcc8ad3ab01f83186c7db565197d *DESCRIPTION
+7c7221ebdc707187384013a42b425050 *DESCRIPTION
 9462c7ed62ae1aa11601858eadbd625c *NAMESPACE
-ad802e0f01aca89d21992d198e4fd7ed *NEWS
+4f31ddf98a0a8e9f4d0d342082e62bee *NEWS
 fd03999011b35092866d6d082a267528 *R/cld.R
 fb371dc9bf3a59db5b2045f190fbd296 *R/contrMat.R
 580487cf09f643078df25d9a179cd93e *R/expressions.R
 1294aa3aa84a03075242654a1f9e7679 *R/glht.R
-143f4e9c4be7878d1750176d79fcfdca *R/helpers.R
+af1a615a0a9890ffb23344954f4ffbe1 *R/helpers.R
 9dba312a1100ead0426531dc7ef25732 *R/maxsets.R
 e82385cef2db818e8aa73db4dbc8bb85 *R/mcp.R
 57bb109cca04b10b6fff06b164b108a9 *R/methods.R
@@ -31,7 +31,7 @@ f7438c819a73554c2d85b639c4518abc *demo/Ch_GLM.R
 fd2141e6b3d2b949218dca5b21aaaa43 *demo/Ch_Intro.R
 7cf57e7e14e931d56b116eeb849aec8f *demo/Ch_Misc.R
 6afcd72dc8eaa8377403bfaf07233779 *demo/Ch_Theory.R
-ad802e0f01aca89d21992d198e4fd7ed *inst/CHANGES
+4f31ddf98a0a8e9f4d0d342082e62bee *inst/CHANGES
 32bf673ddc4ccba6a171eeadb8d51c3e *inst/CITATION
 35beede91a21f75f5032207c68d6347a *inst/MCMT/MCMT.R
 5ccc54941334fbd572cd4891c2009ccc *inst/MCMT/MCMT.Rout
@@ -44,12 +44,12 @@ fe4cbe4e17edf996147191527f7e9efa *inst/deprecated/multcomp-deprecated.Rd
 6f2f2667a0374a4f82e3a01067e18b11 *inst/deprecated/multcomp-oldtests.Rout.save
 d7976958156ebab7eba02ad2ebb0017b *inst/doc/chfls1.Rnw
 acba174d6aa504f44510e772ea82825c *inst/doc/chfls1.bib
-26d50a3b4d5768af949b1e6d9a8cb1ad *inst/doc/chfls1.pdf
+72a4ef974a4cb2efd70cafd4cc8d84aa *inst/doc/chfls1.pdf
 ab5ff56ff6029bc0d5df7aa10ce4eae4 *inst/doc/generalsiminf.Rnw
-f92457622db66c7b5fe43904db957d6f *inst/doc/generalsiminf.pdf
+c61c9d7e880a5314bf79b2471b219159 *inst/doc/generalsiminf.pdf
 a00274f4317eb18540f0f4e38eb9da2f *inst/doc/header.tex
 82322f132b08bd74ef22090b07f30a38 *inst/doc/multcomp-examples.Rnw
-265250e99f437442b574eb6d006c82a3 *inst/doc/multcomp-examples.pdf
+88063288eabe79d5d1aa38a187fc9ef0 *inst/doc/multcomp-examples.pdf
 8547da24406ebd4b24b4130195bc3e1e *inst/doc/multcomp.bib
 755b5003f06781709aaaf6f2798916a2 *inst/doc/references.bib
 b8db88a39fe73ccefbd7deaaffdec3cd *inst/multcomp_VA.R
